# deng-killer

./: .gitignore  AGENTS.md  PRD.md  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/domain/: __init__.py  verification.py
backend/app/privacy/: __init__.py  payload_guard.py
backend/app/schemas/: verification.py
backend/app/services/: __init__.py  decomposer.py  judger.py  pipeline.py  retriever.py  verdict_generator.py  verifier.py
backend/tests/: test_claim_decomposer.py  test_evidence_judger.py  test_evidence_retriever.py  test_privacy_payload_guard.py  test_verdict_generator.py  test_verification_api.py
frontend/: .gitignore  Package.swift  README.md  project.yml
frontend/DengKiller.xcodeproj/: project.pbxproj
frontend/DengKiller.xcodeproj/xcshareddata/xcschemes/: DengKillerApp.xcscheme
frontend/DengKillerApp/Sources/: AppleSpeechTranscriptionService.swift  ContentView.swift  DengKillerApp.swift  ReviewView.swift
frontend/DengKillerCore/Sources/: ClaimScorer.swift  ConversationViewModel.swift  MockVerificationClient.swift  Models.swift  Protocols.swift  SentenceFinalizer.swift
frontend/DengKillerTests/: ConversationViewModelTests.swift
frontend/DengKillerUITests/: DengKillerUITests.swift
