[project]
name = "deng-killer-backend"
version = "0.1.0"
description = "FastAPI claim verification service for Deng Killer."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
